# cl_ml_tools

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  INTERNALS.md  README.md  TASKS.md  benchmark_log.txt  benchmark_log_v2.txt  benchmark_log_v3.txt  pyproject.toml  pyrightconfig.json
cl_ml_tools/: __init__.py  master.py
cl_ml_tools/common/: __init__.py
cl_ml_tools/common/random_media_generator/: __init__.py  base_media.py  basic_shapes.py  errors.py  exif_metadata.py  frame_generator.py  image_generator.py  random_media_generator.py  scene_generator.py
cl_ml_tools/plugins/exif/algo/: exif_tool_wrapper.py
cl_ml_tools/plugins/face_recognition/algo/: detect_face_facenet_pytorch.py
cl_ml_tools/plugins/hash/: image.py  md5.py  video.py
cl_ml_tools/plugins/hls_streaming/algo/: ffmpeg_to_hls.py  hls_stream_generator.py  hls_validator.py
cl_ml_tools/plugins/image_thumbnail/algo/: image_thumbnail.py
cl_ml_tools/plugins/video_thumbnail/algo/: video_thumbnail.py
cl_ml_tools/utils/: media_types.py  mqtt.py  timestamp.py
cl_ml_tools/utils/mqtt/: mqtt_impl.py
src/cl_media_tools/: __init__.py  master.py  worker.py
src/cl_media_tools/common/: __init__.py
src/cl_media_tools/plugins/image_conversion/: README.md  routes.py  schema.py  task.py
src/cl_media_tools/plugins/image_resize/: README.md  routes.py  schema.py  task.py
src/cl_ml_tools/: __init__.py  algorithms.py  master.py  worker.py
src/cl_ml_tools/common/: __init__.py  compute_module.py  file_storage_impl.py  job_creator.py  job_repository.py  job_storage.py  schema_job.py  schema_job_record.py  schemas.py
src/cl_ml_tools/plugins/clip_embedding/: routes.py  task.py
src/cl_ml_tools/plugins/clip_embedding/algo/: clip_embedder.py
src/cl_ml_tools/plugins/dino_embedding/: routes.py  task.py
src/cl_ml_tools/plugins/dino_embedding/algo/: dino_embedder.py
src/cl_ml_tools/plugins/exif/: README.md  __init__.py  routes.py  schema.py  task.py
src/cl_ml_tools/plugins/exif/algo/: exif_tool_wrapper.py
src/cl_ml_tools/plugins/face_detection/: __init__.py  routes.py  schema.py  task.py
src/cl_ml_tools/plugins/face_detection/algo/: face_aligner.py  face_detector.py
src/cl_ml_tools/plugins/face_embedding/: routes.py  task.py
src/cl_ml_tools/plugins/face_embedding/algo/: face_embedder.py
src/cl_ml_tools/plugins/hash/: routes.py  task.py
src/cl_ml_tools/plugins/hash/algo/: image.py
src/cl_ml_tools/plugins/hls_streaming/: README.md  __init__.py  routes.py  schema.py  task.py
src/cl_ml_tools/plugins/hls_streaming/algo/: ffmpeg_to_hls.py  hls_stream_generator.py  hls_validator.py
src/cl_ml_tools/plugins/image_conversion/: routes.py  task.py
src/cl_ml_tools/plugins/image_conversion/algo/: image_convert.py
src/cl_ml_tools/plugins/image_resize/: task.py
src/cl_ml_tools/plugins/image_resize/algo/: image_resize.py
src/cl_ml_tools/plugins/media_resize/: __init__.py  routes.py  schema.py  task.py
src/cl_ml_tools/plugins/media_resize/algo/: __init__.py  image_resize.py  video_resize.py
src/cl_ml_tools/plugins/media_thumbnail/: routes.py  task.py
src/cl_ml_tools/plugins/media_thumbnail/algo/: image_thumbnail.py  video_thumbnail.py
src/cl_ml_tools/utils/: media_types.py  model_downloader.py  profiling.py  timestamp.py
src/cl_ml_tools/utils/mqtt/: __init__.py  mqtt_impl.py  mqtt_instance.py
src/cl_ml_tools/utils/random_media_generator/: __init__.py  base_media.py  basic_shapes.py  errors.py  exif_metadata.py  frame_generator.py  image_generator.py  random_media_generator.py  scene_generator.py  video_generator.py
tests/: MANIFEST.md5  README.md  conftest.py  download_ml_models.py  generate_exif_test_media.py  setup_test_media.py  test_exif_plugin.py  test_face_detection_plugin.py  test_hash_plugin.py  test_hls_streaming_plugin.py  test_media_resize_plugin.py  test_media_types.py  test_mqtt.py  test_mqtt_advanced.py  test_random_media_generator.py  test_schemas.py  test_timestamp.py
tests/plugins/: test_clip_embedding.py  test_dino_embedding.py  test_exif.py  test_exif_advanced.py  test_face_detection.json  test_face_detection.py  test_face_detection_algo.py  test_face_embedding.py  test_face_embedding_perf.py  test_hash.py  test_hls_advanced.py  test_hls_algo.py  test_hls_streaming.py  test_image_conversion.py  test_media_thumbnail.py
tests/utils/: test_media_types.py  test_model_downloader.py  test_random_media_generator.py  test_timestamp.py  video_generator.py
typings/onnxruntime/: __init__.pyi
